# ink-editor

./: .gitignore  PROJECT_STRUCTURE.md  README.md  TECH_STACK.md  USER_GUIDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CommandPalette.tsx  Editor.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useEditor.ts  useFileTree.ts  useKeyboard.ts  useSettings.ts
src/styles/: editor.module.css  global.css  sidebar.module.css  statusbar.module.css  titlebar.module.css
src/types/: index.ts  remarkable.d.ts
src/utils/: codeLanguages.ts  fileTypes.ts  highlight.ts  markdown.ts  wysiwyg.ts
