[package]
name = "ink-editor"
version = "0.1.0"
description = "A terminal-styled markdown editor with Typora-like WYSIWYG"
authors = ["ink-editor"]
edition = "2021"

[lib]
name = "ink_editor_lib"
crate-type = ["staticlib", "rlib"]

[profile.dev]
debug = 0
opt-level = 1
codegen-units = 4
incremental = true

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
